# tinynet

./: .gitignore  CMakeLists.txt  Network.cpp  Network.h  README.md  bindings.cpp  index.html  main.cpp
examples/: CMakeLists.txt  eval_mnist.cpp  train_mnist.cpp
loader/: DataLoader.h  mnist.cpp
tests/: test_main.cpp
